<resources>
    <string name="app_name">El-Malzama</string>
    <string name="welcome_sentence">التعلم\nيجعلني\nأسعد</string>
    <string name="skip">تخطي</string>
    <string name="enter_phone_number">الإيميل</string>
    <string name="register_teacher">إنشاء حساب</string>
    <string name="signin">تسجيل الدخول</string>
    <string name="signin_facebook">تسجيل بإستخدام الفيسبوك</string>
    <string name="signin_google">تسجيل بإستخدام جوجل</string>
    <string name="enter_password">كلمة المرور</string>

    <string name="welcome">مرحباٌ</string>
    <string name="statistics">إحصائيات</string>
    <string name="notifications">الإشعارات</string>
    <string name="my_lessons">دروسي</string>
    <string name="my_subjects">موادي</string>
    <string name="my_schedule">جدولي</string>
    <string name="search">بحث</string>


    <string name="subject_title_test">فيزياء-أولى ثانوي</string>
    <string name="lesson_number_test">الدرس الثالث</string>
    <string name="lesson_title_test">الفيزياء الحديثة الجزء الثالث: الموجات الصوتية</string>
    <string name="lesson_media_details_test">115 دقيقة فيديو</string>
    <string name="lesson_buyers_number_test">205 عملية شراء</string>
    <string name="lesson_views_count_test">1150 مشاهدة</string>
    <string name="lesson_cost_test">20\nجنيه</string>
    <string name="subject_buyers_number_test">11 ألف عملية شراء</string>
    <string name="subject_views_count_test">25 ألف مشاهدة</string>
    <string name="subject_name_test">الجبر</string>
    <string name="subject_academic_year_test">الصف الثالث الثانوي</string>
    <string name="subject_lesson_count_test">14 درس</string>
    <string name="subject_cost_test">350\nجنيه</string>


    <string name="notifications_new_lesson_title_test">تنبيه بدرس جديد</string>
    <string name="notifications_new_lesson_content_test">لديك تدريس في مادة الدراسات غداَ للصف الثالث الثانوي الدرس الرابع</string>
    <string name="notifications_new_lesson_date_test">منذ 5 دقائق</string>


    <string name="notifications_question_title_test">تنبيه بسؤال جديد</string>
    <string name="notifications_question_content_test">لديك سؤال من طالب بخصوص الدرس الثالث بمادة الفيزياء للصف الثاني الثانوي</string>
    <string name="notifications_question_date_test">من ساعة مضت</string>


    <string name="notifications_warning_title_test">تحذير بتأخير درس</string>
    <string name="notifications_warning_content_test">لقد فوت الموعد المحدد لنزول الدرس الرابع من مادة الجبر للصف الثالث الثانوي</string>
    <string name="notifications_warning_date_test">5:30م</string>


    <string name="notifications_buyers_title_test">لديك طلاب جدد</string>
    <string name="notifications_buyers_content_test">قام 10 طلاب جدد بالتسجيل لديك في الدرس العاشر لمادة الكيمياء للصف الثالث الإعدادي</string>
    <string name="notifications_buyers_date_test">أمس 11:30ص</string>

    <string name="notifications_views_title_test">لديك مشاهدات جديدة</string>
    <string name="notifications_views_content_test">حصل الدرس الأول لديك بمادة الفيزياء على 100 مشاهدة جديدة</string>
    <string name="notifications_views_date_test">الخميس</string>

    <string name="profile_name_test">أ/أحمد محمد</string>
    <string name="search_key_test">\@ahmed5256</string>


    <string name="nav_group_help">أقسام أخري</string>
    <string name="nav_group_payments">قسم المالية</string>

    <string name="nav_item_profile">حسابي</string>
    <string name="nav_item_schedule">الجدول الدراسي</string>
    <string name="nav_item_complaints">الشكاوي</string>
    <string name="nav_item_payment">أموالي</string>
    <string name="nav_item_help">المساعدة</string>
    <string name="nav_item_suggestions">الإقتراحات</string>
    <string name="nav_item_settings">الإعدادات</string>
    <string name="nav_item_review">ادعمنا</string>


    <string name="statistics_title">قم بمتابعة الإحصائيات والأرقام لتساعدك على تطوير محتواك التعليمي وأرباحك.</string>
    <string name="statistic_title_test1">عدد المشتركين</string>
    <string name="statistic_value_test1">564 مشترك</string>
    <string name="statistic_date_test1">منذ يومين</string>
    <string name="statistic_title_test2">عدد المشاهدات</string>
    <string name="statistic_value_test2">5787 مشاهدة</string>
    <string name="statistic_date_test2">الأربعاء 5:30</string>
    <string name="statistic_title_test3">عدد الدروس</string>
    <string name="statistic_value_test3">55 درس, 6 مواد</string>
    <string name="statistic_date_test3">منذ ساعة</string>
    <string name="statistic_title_test4">الأعلى إشتراكاٌ</string>
    <string name="statistic_value_test4">الدرس الرابع فيزياء 3 ثانوي</string>
    <string name="statistic_date_test4">يوم 15/3</string>
    <string name="statistic_title_test5">الأعلى مشاهدة</string>
    <string name="statistic_value_test5">الدرس الحادي عشر جبر 2 ثانوي</string>
    <string name="statistic_date_test5">6/12/21</string>
    <string name="statistic_title_test6">التقييم الكلي</string>
    <string name="statistic_value_test6">3.43</string>
    <string name="statistic_date_test6">الآن</string>



    <string name="next">التالي</string>
    <string name="welcome_page1_title">مرحباٌ بك أستاذ!!</string>
    <string name="welcome_page1_content">نحن سعداء لأنك قررت تجربة منصة المعلم. وفي ما يلي تعريف سريع ومبسط بمنصتنا ومميزاتها.</string>
    <string name="welcome_page2_title">منصة المعلم!!</string>
    <string name="welcome_page2_content">تمكنك منصة المعلم من الوصول للمزيد من الطلاب في كل مكان بدون بذل أي مجهود إضافي.</string>
    <string name="welcome_page3_title">بدون مجهود إضافي!!</string>
    <string name="welcome_page3_content">أثناء شرحك لأي درس لطلابك قم بتسجيله صوتي أو فيديو ثم ضعه على المنصة و.. هذا كل شئ!!</string>
    <string name="welcome_page4_title">المنافسة العادلة!!</string>
    <string name="welcome_page4_content">لا توجد أفضلية مطلقة لشهادتك العلمية أو شهرتك. ما سيحدد نجاحك هنا هو طريقتك في التدريس وإهتمامك بطلابك.</string>
    <string name="welcome_page5_title">إبدأ الآن!!</string>
    <string name="welcome_page5_content">قم بإنشاء حسابك الآن وانطلق.</string>


    <string name="get_started">إبدأ</string>
    <string name="or">أو</string>
    <string name="forgot_password">نسيت كلمة المرور</string>
    <string name="dont_have_account">ليس لديك حساب؟</string>
    <string name="create_account">إنشاء حساب</string>
    <string name="content_description_profile_image">Profile image</string>
    <string name="profile_name">الإسم</string>
    <string name="profile_email">الإيميل</string>
    <string name="profile_password">كلمة المرور</string>
    <string name="profile_phone">رقم الهاتف</string>
    <string name="profile_bio">نبذة عني</string>
    <string name="profile_declaration_sentence">الجملة التعريفية</string>
    <string name="content_description_back">العودة للخلف</string>
    <string name="profile">الصفحة الشخصية</string>
    <string name="profile_save_changes">حفظ</string>
    <string name="profile_search_key">كود البحث</string>
    <string name="profile_personal_info">المعلومات الشخصية:</string>
    <string name="profile_account_info">معلومات الحساب:</string>
    <string name="content_description_change_profile_picture">تغيير الصورة الشخصية</string>
    <string name="profile_logout">تسجيل الخروج</string>


    <string name="main_add_lesson">إضافة درس جديد</string>
    <string name="previous">السابق</string>

    <string name="add_lesson_description">تفاصيل الدرس</string>
    <string name="subject">المادة الدراسية</string>
    <string name="subject_academic_year">الصف الدراسي</string>
    <string name="lesson_number">رقم الدرس -مثال: الدرس الثالث</string>
    <string name="lesson_title">عنوان الدرس بالكامل</string>
    <string name="lesson_cost_title">نوع الإشتراك:</string>
    <string name="free_lesson">درس مجاني</string>
    <string name="lesson_cost">قيمة الإشتراك:  بحد أدنى 20ج</string>

    <string name="add_lesson_media_title">تسجيل الدرس</string>
    <string name="add_lesson_media_content">مقطع بحد أقصى 130دقيقة</string>
    <string name="content_description_browse_lesson_media">إختيار ملف المحاضرة الصوتي أو الفيديو من الملفات</string>
    <string name="add_lesson_browse_title">إختيار من الملفات</string>
    <string name="add_lesson_browse_content">قم بإختيار ملف الدرس من ملفاتك, يجب أن يكون مقطع صوتي أو مقطع فيديو لا يتجاوز 500ميجا</string>
    <string name="content_description_record_lesson_video">تسجيل مقطع فيديو للدرس</string>
    <string name="add_lesson_record_video_title">قم بتسجيل مقطع فيديو</string>
    <string name="add_lesson_record_video_content">يمكنك من تسجيل مقطع فيديو للدرس, كما يمكنك إختيار الجودة المناسبة لك.</string>
    <string name="content_description_record_lesson_audio">تسجيل مقطع صوتي للدرس</string>
    <string name="add_lesson_record_audio_title">قم بتسجيل مقطع صوتي</string>
    <string name="add_lesson_record_audio_content">يمكنك من تسجيل مقطع صوتي للدرس, يلزم إضافة ملزمة لتوضيح الصوت للطالب.</string>


    <string name="add_lesson_attachments_title">إضافة ملحقات</string>
    <string name="content_description_add_lecture_paper">إضافة ملزمة للدرس</string>
    <string name="add_lesson_attach_paper_title">قم بإضافة ملزمة</string>
    <string name="add_lesson_attach_paper_content">يمكنك إضافة ملزمة لتوضيح محتوى درسك ومساعدة طلابك على فهم الدرس.</string>
    <string name="add_lesson_attachments_content">ملحقات بصيغة PDF/word, ننصحك بإضافتها لرفع تقييمك.</string>
    <string name="content_description_add_homework">إضافة واجب للدرس</string>
    <string name="add_lesson_attach_homework_title">قم بإضافة واجب</string>
    <string name="add_lesson_attach_homework_content">يمكنك إضافة واجب للدرس لتدريب طلابك على طريقة الأسئلة وإختبار فهمهم لدرسك.</string>
    <string name="content_description_add_answers">إضافة إجابات واجب الدرس</string>
    <string name="add_lesson_attach_answers_title">قم بإضافة إجابات الواجب</string>
    <string name="add_lesson_attach_answers_content">يمكنك إضافة إجابات للواجبات الخاصة بهذا الدرس لحث طلابك على إختبار أنفسهم.</string>



</resources>