<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_color"
    android:layoutDirection="ltr"
    android:focusable="false">

    <TextView
        android:id="@+id/course_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/course_name"
        app:layout_constraintEnd_toEndOf="@id/course_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/black_color"
        android:text="@string/add_lesson_description"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginHorizontal="7dp"
        android:layout_marginTop="19dp"/>


    <TextView
        android:id="@+id/course_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/course_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.9"
        android:background="@drawable/b_login_signin_googlebg"
        android:text="@string/subject"
        android:textColor="@color/gray_color"
        android:textSize="15sp"
        android:textStyle="bold"
        android:paddingHorizontal="25dp"
        android:paddingVertical="11dp"
        android:layout_marginTop="19dp"
        app:drawableStartCompat="@drawable/z_spinner_testd" />

    <TextView
        android:id="@+id/course_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/course_name"
        app:layout_constraintEnd_toEndOf="@id/course_name"
        app:layout_constraintTop_toBottomOf="@id/course_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:background="@drawable/b_login_signin_googlebg"
        android:textColor="@color/gray_color"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/subject_academic_year"
        android:paddingHorizontal="25dp"
        android:paddingVertical="11dp"
        app:drawableStartCompat="@drawable/z_spinner_testd"
        android:layout_marginTop="19dp"/>

    <EditText
        android:id="@+id/lesson_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/course_name"
        app:layout_constraintEnd_toEndOf="@id/course_name"
        app:layout_constraintTop_toBottomOf="@id/course_year"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:background="@drawable/b_login_signin_googlebg"
        android:textColor="@color/black_color"
        android:textColorHint="@color/gray_color"
        android:textSize="15sp"
        android:textStyle="bold"
        android:hint="@string/lesson_number"
        android:autofillHints="name"
        android:inputType="text"
        android:paddingHorizontal="25dp"
        android:paddingVertical="11dp"
        android:layout_marginTop="19dp"
        tools:ignore="TextFields" />


    <EditText
        android:id="@+id/lesson_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/course_name"
        app:layout_constraintEnd_toEndOf="@id/course_name"
        app:layout_constraintTop_toBottomOf="@id/lesson_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:background="@drawable/b_login_signin_googlebg"
        android:textColor="@color/black_color"
        android:textColorHint="@color/gray_color"
        android:textSize="15sp"
        android:textStyle="bold"
        android:hint="@string/lesson_title"
        android:paddingHorizontal="25dp"
        android:paddingVertical="11dp"
        android:layout_marginTop="19dp"
        android:autofillHints="name"
        android:inputType="text"/>

    <TextView
        android:id="@+id/payment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/lesson_title"
        app:layout_constraintEnd_toEndOf="@id/lesson_title"
        app:layout_constraintTop_toBottomOf="@id/lesson_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/black_blue_color"
        android:text="@string/lesson_cost_title"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginHorizontal="7dp"
        android:layout_marginTop="19dp"
        />

    <CheckBox
        android:id="@+id/free_lesson_check"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/lesson_title"
        app:layout_constraintEnd_toEndOf="@id/lesson_title"
        app:layout_constraintTop_toBottomOf="@id/payment_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="19dp"
        android:checked="true"
        android:buttonTint="@color/blue_color"
        android:textColor="@color/black_color"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/free_lesson"
        android:layout_marginEnd="7dp"
        android:layoutDirection="rtl"
        android:textDirection="rtl"
        android:paddingHorizontal="7dp"
        />

    <EditText
        android:id="@+id/lesson_cost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/course_name"
        app:layout_constraintEnd_toEndOf="@id/course_name"
        app:layout_constraintTop_toBottomOf="@id/free_lesson_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:background="@drawable/b_login_signin_googlebg"
        android:textColor="@color/black_color"
        android:textColorHint="@color/gray_color"
        android:textSize="15sp"
        android:textStyle="bold"
        android:hint="@string/lesson_cost"
        android:paddingHorizontal="25dp"
        android:paddingVertical="11dp"
        android:layout_marginTop="11dp"
        android:enabled="false"
        android:autofillHints="name"
        android:inputType="text"/>


</androidx.constraintlayout.widget.ConstraintLayout>